# vscode_ws

./: .gitignore  downloader.code-workspace
app/: app.code-workspace
app/app_fw/: CMakeLists.txt
app/app_fw/src/: main.cpp  main.h
app/app_fw/src/ap/: ap.cpp  ap_dat.h  ap_def.h  ap_io.h  ap_log.h  ap_obj.h  ap_reg.h  ap_util.h
app/app_fw/src/ap/ap_ui/: uiNextionLcd.cpp  uiNextionLcd.h  uiRemoteCtrl.cpp  uiRemoteCtrl.h
app/app_fw/src/ap/control/: cnAutoManager.cpp  cnAutoManager.h  cnProcess.cpp  cnProcess.h
app/app_fw/src/ap/engine/: enCylinder.h  enFastechMotor.cpp  enFastechMotor.h  enVacuum.h
app/app_fw/src/ap/interface/: IAxis.h  ICylinder.h  IIO.h  IVacuum.h
app/app_fw/src/bsp/: stm32g0xx_hal_conf.h  stm32g0xx_it.c
app/app_fw/src/bsp/ldscript/: STM32G070RBTX_FLASH.ld
app/app_fw/src/common/comm/: commFastech.c  commFastech.h  commNextion.c  commNextion.h  commRobotro.c  commRobotro.h
app/app_fw/src/common/inc_hw/: uart.h
app/app_fw/src/common/inc_module/: at24c64.h  opPanel.h
app/app_fw/src/hw/: hw.c  hw.h  hw_def.h
app/app_fw/src/hw/driver/: cmd.c  led.c  uart.c
app/app_fw/src/module/: module.c  module.h  module_def.h
app/app_fw/src/module/driver/: opPanel.c
app/app_fw/tools/: STM32G070.svd  arm-none-eabi-gcc.cmake
app_prjPeelTester/: prjPeelTester.code-workspace
app_prjPeelTester/prjPeelTester/src/: main.h
app_prjPeelTester/prjPeelTester/src/ap/: ap.cpp  def_obj.h
app_prjPeelTester/prjPeelTester/src/ap/_inc/: ap_dat.h  ap_def.h  ap_evt.h  ap_io.h  ap_log.h  ap_reg.h  ap_util.h  apiNextion.h  apiRemote.h  cnAuto.h  cnDo.h  cnJob.h  enAdc4ch.h  enCyl.h  enFaxis.h  enOp.h  enVac.h
app_prjPeelTester/prjPeelTester/src/ap/api/: apiNextion.cpp  apiRemote.cpp
app_prjPeelTester/prjPeelTester/src/ap/control/: cnAuto.cpp  cnDo.cpp  cnJob.cpp
app_prjPeelTester/prjPeelTester/src/ap/engine/: enAdc4ch.cpp  enFaxis.cpp
app_prjPeelTester/prjPeelTester/src/ap/interface/: iaxis.h  icylinder.h  ivacuum.h
app_prjPeelTester/prjPeelTester/src/bsp/: bsp.c  stm32g0xx_it.c
app_prjPeelTester/prjPeelTester/src/common/: def.h
app_prjPeelTester/prjPeelTester/src/common/comm/: commFastech.h  commNextion.c
app_prjPeelTester/prjPeelTester/src/common/core/: qbuffer.h
app_prjPeelTester/prjPeelTester/src/common/inc_ext/: at24c64.h
app_prjPeelTester/prjPeelTester/src/common/inc_hw/: cli.h
app_prjPeelTester/prjPeelTester/src/ext/: ext.c  ext.h  ext_def.h
app_prjPeelTester/prjPeelTester/src/ext/driver/: at24c64.c
app_prjPeelTester/prjPeelTester/src/hw/: hw.c  hw_def.h
atmega2560/: atmega2560.code-workspace
atmega2560/atmega2560_fw/: CMakeLists.txt
atmega2560/atmega2560_fw/src/: main.cpp  main.h
atmega2560/atmega2560_fw/src/ap/: ap.cpp  ap.h
atmega2560/atmega2560_fw/src/bsp/: bsp.c  bsp.h
atmega2560/atmega2560_fw/src/common/: def.h
atmega2560/atmega2560_fw/src/hw/: hw.c  hw.h  hw_def.h
atmega2560/atmega2560_fw/src/hw/driver/: led.c
avr_fw/: avr128da.code-workspace
avr_fw/avr128da_fw/src/bsp/: bsp.c
avr_fw/avr128da_fw/src/hw/: hw.c
avr_ing/: avr128da.code-workspace
avr_ing/avr128da_boot/src/hw/: hw.c
downloader/: CMakeLists.txt
downloader/src/: main.cpp
downloader/src/ap/: ap.cpp  ap_def.h
downloader/src/ap/include/: boot.h  cli_run.h
downloader/src/common/hw/include/: cli.h  uart.h
downloader/src/hw/: hw.c  hw.h
downloader/src/sys/: sys.h
max78000/: max78000.code-workspace
max78000/max78000_fw/: CMakeLists.txt
max78000/max78000_fw/src/: main.cpp
max78000/max78000_fw/src/ap/: ap.cpp
max78000/max78000_fw/src/bsp/: bsp.c  bsp.h
max78000/max78000_fw/src/hw/: hw.c  hw.h  hw_def.h
max78000/max78000_fw/src/hw/driver/: led.c  uart.c
max78000/max78000_fw/tools/: arm-none-eabi-gcc.cmake
pico/: pico_fw.code-workspace
pico/pico_fw/: CMakeLists.txt
pico/pico_fw/tools/: down.py
stm32/: stm32.code-workspace
stm32/stm32_fw/: CMakeLists.txt
stm32/stm32_fw/src/Core/Inc/: stm32f1xx_it.h
stm32/stm32_fw/src/Core/Src/: gpio.c
stm32/stm32_fw/tools/: arm-none-eabi-gcc.cmake
stm32_fw/src/Core/Src/: main.c  stm32f1xx_it.c  usart.c
stm32g070/: jL_bootloader.code-workspace  jL_branchCtrller_fw.code-workspace  jL_downloader.code-workspace  stm32g070_ws.code-workspace
stm32g070/jL_bootloader/: CMakeLists.txt
stm32g070/jL_branchCtrller_fw/: CMakeLists.txt
stm32g070/jL_branchCtrller_fw/tools/: arm-none-eabi-gcc.cmake
stm32g070/jL_downloader/: CMakeLists.txt
stm32g070/prjPeelTester_fw/: CMakeLists.txt
stm32g070/prjPeelTester_fw/src/: main.cpp
stm32g070/prjPeelTester_fw/src/ap/: ap.cpp  ap.h  ap_dat.cpp  ap_def.h  ap_io.cpp  ap_log.cpp  ap_reg.cpp  ap_util.cpp  def_obj.h
stm32g070/prjPeelTester_fw/src/ap/_inc/: ap_dat.h  ap_evt.h  ap_io.h  ap_log.h  ap_reg.h  ap_util.h  apiNextion.h  apiRemote.h  cnAuto.h  cnAutomanager.h  cnJob.h  cnProcess.h  enCyl.h  enFaxis.h  enOp.h  enVac.h
stm32g070/prjPeelTester_fw/src/ap/ap_ui/: apiNextion.cpp  apiRemote.cpp
stm32g070/prjPeelTester_fw/src/ap/control/: cnAuto.cpp  cnAutomanager.cpp  cnJob.cpp  cnProcess.cpp
stm32g070/prjPeelTester_fw/src/ap/engine/: enCyl.cpp  enFaxis.cpp  enOp.cpp  enVac.cpp
stm32g070/prjPeelTester_fw/src/ap/interface/: iio.h
stm32g070/prjPeelTester_fw/src/bsp/: bsp.h  stm32g0xx_hal_msp.c
stm32g070/prjPeelTester_fw/src/common/: def.h
stm32g070/prjPeelTester_fw/src/common/comm/: commFastech.c  commFastech.h  commNextion.c  commNextion.h  commRobotro.c  commRobotro.h
stm32g070/prjPeelTester_fw/src/common/core/: qbuffer.c
stm32g070/prjPeelTester_fw/src/common/inc_hw/: uart.h
stm32g070/prjPeelTester_fw/src/hw/: hw.h  hw_def.h
stm32g070/prjPeelTester_fw/src/hw/driver/: cli.c  led.c  uart.c
w806/: w806.code-workspace
w806/w806_fw/: CMakeLists.txt
w806/w806_fw/src/ap/: ap.c
w806/w806_fw/src/bsp/: bsp.c  bsp.h  wm_it.c
w806/w806_fw/tools/: w806-gcc.cmake
w806/w806_rtos/: CMakeLists.txt
w806/w806_rtos/src/: main.cpp
w806/w806_rtos/src/ap/: ap.cpp
w806/w806_rtos/src/bsp/: bsp.h  rtos.c  rtos.h  wm_it.c
w806/w806_rtos/src/bsp/ldscript/: gcc_csky.ld
w806/w806_rtos/src/hw/: hw.c  hw_def.h
(+2 files in other folders)
